--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>141.world</title>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=5"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QX2VPG8G7H"></script>
     <script>
@@ -17,7 +17,7 @@
         gtag('config', 'G-QX2VPG8G7H');
     </script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">    
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?v=3">
 </head>
 
 
@@ -75,7 +75,7 @@
               </h2>
               - 본 사이트는 메이플스토리 금손 어워즈의 뷰어이며, 모든 저작권은 각 이미지별 저작권자에게 있습니다
               <br>- 본 사이트는 공정한 투표를 위해 모든 항목을 랜덤순으로 정렬하며, 절대 임의 조작하지 않습니다.
-              <br>- 본 사이트로 어떠한 이익도 창출하지 않으며, 모든 소스코드는 <a href="https://github.com/Jeongsj/1st_awards" target="_blank">이곳</a>에서 확인하실 수 있습니다.
+              <br>- 본 사이트로 어떠한 이익도 창출하지 않으며, 모든 소스코드는 <a href="https://github.com/Ryububuck/1st_awards" target="_blank">이곳</a>에서 확인하실 수 있습니다.
             </div>
             </div>
         </div>
