--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>141.world</title>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-    <script src="script.js?v=6"></script>
+    <script src="script.js?v=7"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QX2VPG8G7H"></script>
     <script>
@@ -17,7 +17,7 @@
         gtag('config', 'G-QX2VPG8G7H');
     </script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">    
-    <link rel="stylesheet" href="main.css?v=3">
+    <link rel="stylesheet" href="main.css?v=4">
 </head>
 
 
@@ -33,7 +33,7 @@
 
     <!-- main -->
     <div class="ui main container">
-        <h1 class="ui center aligned header">1st 금손 어워즈 뷰어</h1>
+        <h1 class="ui center aligned header">1st 금손 어워즈 당선작</h1>
 
         <div class="ui pointing secondary menu">
             <a class="item active" data-tab="first">헤어</a>
