--- a/index.html
+++ b/index.html
@@ -70,19 +70,21 @@
 
         <div class="ui bottom attached tab segment" data-tab="fifth">
             <div class="ui container">
-              <h2 class="ui header"> 헤어 </h2>
+              <h2 class="ui header" id="priceSum">총 금액</h2>
+
+              <h2 class="ui header" id="price1"> 헤어 </h2>
               <div class="ui massive horizontal divided list" id="hair2">
               </div>
 
-              <h2 class="ui header"> 성형 </h2>
+              <h2 class="ui header" id="price2"> 성형 </h2>
               <div class="ui massive horizontal divided list" id="face2">
               </div>
 
-              <h2 class="ui header"> 의상 </h2>
+              <h2 class="ui header" id="price3"> 의상 </h2>
               <div class="ui massive horizontal divided list" id="clothes2">
               </div>
 
-              <h2 class="ui header"> 펫 </h2>
+              <h2 class="ui header" id="price4"> 펫 </h2>
               <div class="ui massive horizontal divided list" id="pet2">
               </div>
 
