Fix Mobile Layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         gtag('config', 'G-QX2VPG8G7H');
     </script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">    
-    <link rel="stylesheet" href="main.css?v=5">
+    <link rel="stylesheet" href="main.css?v=6">
 </head>
 
 
@@ -25,27 +25,25 @@
     <!-- header -->
     <div class="ui fixed inverted menu">
         <div class="ui container">
-          <a href="#" class="ui header item">
+          <a href="#" class="ui header item center" style="color:black;">
             141.world
           </a>
         </div>
     </div>
 
     <!-- main -->
-    <div class="ui main container">
+    <div class="ui main container" style="margin: 0.7em; margin-top: 5em;">
         <h1 class="ui center aligned header">1st 금손 어워즈 당선작</h1>
-
+        <div class="item" id="dev" data-html="<img class='ui medium image' src='https://maple.loona.world/hj.gif'>">
+          © Dev by 무명의&nbsp;<a href="https://namu.wiki/w/%EC%A0%84%ED%9D%AC%EC%A7%84" target="_blank">희진이</a>팬
+        </div>
+        
         <div class="ui pointing secondary menu">
             <a class="item active" data-tab="first">헤어</a>
             <a class="item" data-tab="second">성형</a>
             <a class="item" data-tab="third">의상</a>
             <a class="item" data-tab="fourth">펫</a>
             <a class="item final" data-tab="fifth">결과 & 찜목록</a>
-            <div class="right menu">
-                <div class="item" id="dev" data-html="<img class='ui medium image' src='https://maple.loona.world/hj.gif'>">
-                © Dev by 무명의&nbsp;<a href="https://namu.wiki/w/%EC%A0%84%ED%9D%AC%EC%A7%84" target="_blank">희진이</a>팬
-                </div>
-            </div>
         </div>
 
         <div class="ui bottom attached tab segment active" data-tab="first">
