--- a/index.html
+++ b/index.html
@@ -17,22 +17,20 @@
         gtag('config', 'G-QX2VPG8G7H');
     </script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">    
-    <link rel="stylesheet" href="main.css?v=6">
+    <link rel="stylesheet" href="main.css?v=7">
 </head>
 
 
 <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false'>
     <!-- header -->
-    <div class="ui fixed inverted menu">
-        <div class="ui container">
-          <a href="#" class="ui header item center" style="color:black;">
-            141.world
-          </a>
-        </div>
-    </div>
+      <a href="#">
+      <div class="ui fixed inverted menu">
+          <div class="ui header item center"  style="color:black;">141.world</div>
+      </div>
+    </a>
 
     <!-- main -->
-    <div class="ui main container" style="margin: 0.7em; margin-top: 5em;">
+    <div class="ui main container">
         <h1 class="ui center aligned header">1st 금손 어워즈 당선작</h1>
         <div class="item" id="dev" data-html="<img class='ui medium image' src='https://maple.loona.world/hj.gif'>">
           © Dev by 무명의&nbsp;<a href="https://namu.wiki/w/%EC%A0%84%ED%9D%AC%EC%A7%84" target="_blank">희진이</a>팬
