--- a/1st_awards/index.html
+++ b/1st_awards/index.html
@@ -7,7 +7,7 @@
   <title>141.world - 1st 금손 어워즈 당선작</title>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-  <script src="script.js?v=12"></script>
+  <script src="script.js?v=13"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QX2VPG8G7H"></script>
   <script>
@@ -66,19 +66,19 @@
         <h2 class="ui header" id="priceSum">총 금액</h2>
 
         <h2 class="ui header" id="price1"> 헤어 </h2>
-        <div class="ui massive horizontal divided list" id="hair2">
+        <div class="ui massive horizontal divided list" id="final0">
         </div>
 
         <h2 class="ui header" id="price2"> 성형 </h2>
-        <div class="ui massive horizontal divided list" id="face2">
+        <div class="ui massive horizontal divided list" id="final1">
         </div>
 
         <h2 class="ui header" id="price3"> 의상 </h2>
-        <div class="ui massive horizontal divided list" id="clothes2">
+        <div class="ui massive horizontal divided list" id="final2">
         </div>
 
         <h2 class="ui header" id="price4"> 펫 </h2>
-        <div class="ui massive horizontal divided list" id="pet2">
+        <div class="ui massive horizontal divided list" id="final3">
         </div>
 
         <div class="ui desc">
