--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	                        <h1 class="hero-title mt-0"><span style="font-size:1.5em; font-family: 'Playfair Display'">1</span>st Awards</h1>
 	                        <p class="hero-paragraph">마음에 드는 공모전 선정작을 미리 골라보세요!</p>
 	                        <div class="hero-cta">
+								<a class="button button-shadow" href="/analytics/index.html">Analytics</a>
 								<a class="button button-shadow" href="/1st_awards/index.html" style="background: linear-gradient(to left, #78ffd6, #a8ff78); color: black !important">Early access</a>
 							</div>
 						</div>
