--- a/1st_awards/index.html
+++ b/1st_awards/index.html
@@ -62,6 +62,7 @@
     <div class="ui tab segment" data-tab="fifth">
       <div class="ui container">
         <h2 class="ui header" id="priceSum">총 금액</h2>
+        <div class="ui description" id="info_price" style="width: 100%; text-align: center;">통계 <a href="../analytics" target="_blank">자세히 보기</a></div>
 
         <h2 class="ui header" id="price1"> 헤어 </h2>
         <div class="ui massive horizontal divided list" id="final0">
@@ -94,7 +95,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-  <script src="script.js?v=14"></script>
+  <script src="script.js?v=15"></script>
 </body>
 
 </html>
