--- a/analytics/index.html
+++ b/analytics/index.html
@@ -170,7 +170,7 @@
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">D-5</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">D-4</div>
                                                 </div>
                                                 <div class="col">
                                                     <div class="progress progress-sm mr-2">
@@ -241,6 +241,11 @@
                                         <div class="progress-bar" role="progressbar" style="width: 5%; background-color: #f39c31;"
                                             aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
+                                    <h4 class="small font-weight-bold">전체 <span class="float-right">100%</span></h4>
+                                    <div class="progress mb-4">
+                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 100%;"
+                                            aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -251,25 +256,18 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">항목별 득표율</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">광고</h6>
                                 </div>
                                 <!-- Card Body -->
-                                <div class="card-body">
-                                    <div class="chart-pie pt-4 pb-2">
-                                        <canvas id="myPieChart"></canvas>
+                                <div class="card-body" style="padding-bottom: 0px !important;">
+                                    <div class="pt-4 pb-2" style="padding: 0px !important">
+                                        <video autoplay loop class="bg-video" style="width: 100%; padding-top: -1rem">
+                                            <source src="a.mp4" type="video/mp4">
+                                        </video>
                                     </div>
-                                    <div class="mt-4 text-center small">
+                                    <div class="mt-4 text-center small" style="margin: 0.7rem 0 !important;">
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> 헤어
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> 성형
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> 의상
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> 펫
+                                            <i class="fas fa-circle text-primary" style="color: #ed0090 !important;"></i> 희진 (이달의 소녀)
                                         </span>
                                     </div>
                                 </div>
@@ -447,7 +445,7 @@
 
     <!-- Page level plugins -->
     <script src="vendor/chart.js/Chart.min.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="js/chart-pie-demo.js"></script>
     <script src="vendor/datatables/jquery.dataTables.js"></script>
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
@@ -512,7 +510,7 @@
         }
 
         $.getJSON('db_json/info.json', function(items){
-            $('#card1').text(nc(items.sum_cnt)+'명');
+            $('#card1').text(nc(items.sum_cnt)+'회');
             $('#card2').text(nc(items.price)+'원');
             $('#card4').text(items.time);
         });
