Fix chrome not working

--- a/analytics/index.html
+++ b/analytics/index.html
@@ -261,7 +261,7 @@
                                 <!-- Card Body -->
                                 <div class="card-body" style="padding-bottom: 0px !important;">
                                     <div class="pt-4 pb-2" style="padding: 0px !important">
-                                        <video autoplay loop class="bg-video" style="width: 100%; padding-top: -1rem">
+                                        <video autoplay muted loop class="bg-video" style="width: 100%; padding-top: -1rem">
                                             <source src="a.mp4" type="video/mp4">
                                         </video>
                                     </div>
